express/code/blocks/print-product-detail/print-product-detail.css
/* ... */
.pdpx-standard-selector {
  padding: var(--spacing-100);
  cursor: pointer;
}
.pdpx-product-details-section {
  margin-bottom: var(--spacing-400);
}
.pdpx-product-details-section-title-container {
  padding-bottom: var(--spacing-300);
}
.pdpx-product-details-section-title {
  font-size: 16px;
  font-weight: 700;
}
.pdpx-product-details-section-item-container {
  border-bottom: 1px solid var(--color-gray-600);
  padding: var(--spacing-300);
  cursor: pointer;
}
.pdpx-product-details-section-item-title-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.pdpx-product-details-section-item-title {
  display: block;
  font-size: 16px;
  font-weight: 700;
  color: var(--color-gray-950);
  padding-bottom: 5px;
  width: 90%;
}

.pdpx-product-details-section-item-icon {
  padding: var(--spacing-100);
}
.pdpx-product-details-section-item-description {
  display: none;
  visibility: hidden;
}
.pdpx-product-details-section-item-container.expanded
  .pdpx-product-details-section-item-description {
  display: block;
  visibility: visible;
}
.pdpx-product-details-section-item-container.expanded
  .pdpx-product-details-section-item-icon {
  background-image: url('/express/code/icons/minus-sign.svg');
  background-repeat: no-repeat;
  background-position: center;
}
.pdpx-product-details-section-item-container.collapsed
  .pdpx-product-details-section-item-icon {
  background-image: url('/express/code/icons/plus-sign.svg');
  background-repeat: no-repeat;
  background-position: center;
}
.pdpx-hidden-select-input {
  display: none;
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  opacity: 0;
  pointer-events: none;
  z-index: -1;
  overflow: hidden;
  border: none;
  outline: none;
  box-shadow: none;
  background: transparent;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

/*DRAWER*/
.pdpx-drawer {
  position: fixed;
  left: 0;
  bottom: 0;
  z-index: 102;
  border-radius: 16px 16px 0 0;
  background-color: var(--color-white);
  height: 600px;
  width: 100%;
  transform: translateY(0);
  transition: transform 300ms ease;
  display: flex;
  flex-direction: column;
}
.pdpx-drawer.hidden {
  transform: translateY(100%);
}
.pdpx-drawer-head {
  display: flex;
  position: sticky;
  top: 0;
  justify-content: space-between;
  border-radius: 16px 16px 0 0;
  border-bottom: 1px solid var(--color-gray-325);
  padding: var(--spacing-300);
  background-color: var(--color-white);
}
.pdpx-drawer-head-label {
  font-weight: 700;
}
.pdpx-drawer-head button {
  cursor: pointer;
  background: none;
  border: none;
}
.pdpx-drawer-body {
  padding: var(--spacing-300) var(--spacing-300) 0 var(--spacing-300);
  display: flex;
  flex-direction: column;
  flex: 1;
  overflow: auto;
  scrollbar-width: thin;
}
.pdpx-drawer-body .pdpx-mini-pill-selector-options-wrapper,
.pdpx-drawer-body .pdpx-mini-pill-selector-options-container,
.pdpx-drawer-body .simple-carousel-container,
.pdpx-drawer-body .simple-carousel-platform {
  overflow: visible;
}
/* Allow tooltips to show above carousel on main page */
.pdpx-customization-inputs-container .simple-carousel-container {
  overflow: visible;
}
.pdpx-customization-inputs-container .simple-carousel-platform {
  overflow-x: auto;
  overflow-y: visible;
}
.pdpx-curtain {
  z-index: 101;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgb(50 50 50 / 80%);
}
.pdpx-curtain.hidden {
  display: none;
}
/*END DRAWER*/


/* SIZE CHART */
.pdpx-drawer-body--size-chart {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-300);
  padding: var(--spacing-300);
  overflow-y: auto;
  flex: 1;
}
.size-chart-product-name {
  font-size: var(--body-font-size-l);
  font-weight: var(--subheading-font-weight);
  color: var(--color-gray-950);
  margin: 0;
}
.size-chart-table-container {
  border-radius: 16px;
  border: 1px solid var(--color-gray-325);
  padding: var(--spacing-300);
  color: var(--color-gray-900);
}
.size-chart-table-section {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-100);
}
.size-chart-table thead .size-chart-table-header {
  font-size: var(--body-font-size-s);
  font-weight: var(--subheading-font-weight);
  color: var(--color-gray-950);
  text-align: left;
  padding: var(--spacing-100);
  white-space: nowrap;
}
.size-chart-table {
  width: 100%;
  border-collapse: separate;
  border-spacing: 0 var(--spacing-100);
  table-layout: fixed;
}
.size-chart-table thead th {
  font-size: var(--body-font-size-s);
  font-weight: normal;
  color: var(--color-gray-800);
  text-align: left;
  padding: var(--spacing-100);
}
.size-chart-table thead th:nth-child(2),
.size-chart-table thead th:nth-child(3) {
  padding-left: var(--spacing-400);
  text-align: right;
}
.size-chart-table tbody tr {
  background: var(--color-white);
}
.size-chart-table tbody tr:nth-child(odd) {
  background: #ebebeb;
}
.size-chart-table tbody tr:nth-child(odd) td:first-child {
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}
.size-chart-table tbody tr:nth-child(odd) td:last-child {
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}
.size-chart-table tbody td {
  font-size: var(--body-font-size-xs);
  color: var(--color-gray-950);
  padding: var(--spacing-100) var(--spacing-200);
  word-break: break-word;
}
.size-chart-table tbody td:nth-child(2),
.size-chart-table tbody td:nth-child(3) {
  padding-left: var(--spacing-400);
  text-align: right;
}
.size-chart-instructions {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-300);
  margin-bottom: 80px;
}
.size-chart-instruction-section h3 {
  font-size: var(--body-font-size-m);
  font-weight: var(--subheading-font-weight);
  color: var(--color-gray-950);
  margin: 0 0 var(--spacing-100) 0;
}
/* ... */

